# newsWorld

./: README.md  Survey_Statistics.md  pyproject.toml
genworlds/agents/abstracts/: action_planner.py  agent.py
genworlds/agents/concrete/basic_assistant/thoughts/: action_schema_selector.py  event_filler.py
genworlds/agents/memories/: simulation_memory.py
genworlds/events/abstracts/: event.py
genworlds/simulation/sockets/: server.py
genworlds/simulation/sockets/handlers/: event_handler.py
genworlds/utils/: logging_factory.py
genworlds/worlds/abstracts/: world.py
genworlds/worlds/concrete/base/: actions.py
newsagents/: .env  log
newsagents/Log/: 1_log2  1_log3  JangPing_1_log  rm.py  us_election_forecast_result.txt  us_election_forecast_result2.txt  us_election_forecast_result_formatted.txt  us_election_forecast_result_formatted2.txt  z_script_extract_last_result_from_txt.py  z_script_extract_sentence_frome_log.py
newsagents/agents/: agents.py  custom_action_planner.py  custom_agent_state.py  custom_state_manager.py  test.py
newsagents/agents/memories/: custom_simulation_memory.py
newsagents/agents/thoughts/: action_schema_selector.py  agent_bulider.py  agent_bulider_large.py  election_result_builder.py  emotion_attitude_builder.py  event_filler.py  news_classifier.py
newsagents/docs/: CN_academic.txt  CN_education.md  JP_environment.md  US_2020_election.md  US_political.md  US_social.md  高等教育学校教职工情况 - 中华人民共和国教育部政府门户网站.html
newsagents/events/: events.py
newsagents/objects/: custom_objects.py  news.py
newsagents/world/: custom_actions.py  custom_world.py  test.ipynb  test.py  world.py  world2.py  world_agentGen.py  world_map.py
