[tool.poetry]
name = "genworlds"
version = "0.1.0"
description = ""
authors = ["BladeY1 <1328370638@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
websocket-client="1.5.1"
websockets="11.0.3"
colorama = "^0.4.6"
colorlog = "^6.8.2"
jsonschema = "^4.21.1"
qdrant-client = "^1.8.2"
langchain = "^0.2.6"
langchain-core = "^0.2.10"
langchain-community = "^0.2.6"
openai = "^1.17.0"
langchain-openai = "^0.1.2"
python-dotenv = "^1.0.1"
langchain-mistralai = "^0.1.2"
kor = "^1.0.1"
spacy = "^3.7.4"
langchain-experimental = "^0.0.62"
langchain-text-splitters = "^0.2.2"
langchain-chroma = "^0.1.2"
bs4 = "^0.0.2"
unstructured = {extras = ["md"], version = "^0.14.9"}
sentence-transformers = "^3.0.1"
ollama = "^0.2.1"








[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
